2005-02-03  Dominique Devriese  <devriese@kde.org>

	* Add a nice new locus example: trifolium-of-delongchamps.kig

2005-02-03  Pino Toscano <toscano.pino@tiscali.it>

	* Bump the version number to 0.9.1.

2005-01-31  Maurizio Paolini <paolini@dmf.unicatt.it>

	* added point/line/circle inversion with respect to a given
	circle.

2005-01-26  Maurizio Paolini <paolini@dmf.unicatt.it>

	* added many constructions related to polygons:
	sides, center of mass, winding number, convexity
	test, convex hull.

	* changes in construct_mode (and in a few other
	places) to allow the construction with a "cursor"
	point that gives information on the constructed
	object, but should not be inserted as argument.
	This is used for a better interactive construction
	of regular polygons
	
2005-01-20  Maurizio Paolini <paolini@dmf.unicatt.it>

	* new "attaching" style for labels to objects, based on the
	new RelativePointType.  This type is a point located at a
	relative position with respect to a given attachPoint()
	associated to the ObjectImp.  It depends on three arguments:
	the object to which the position is relative and two DoubleImp
	givin the x and y displacement.  Now use for angles and
	polygons.

2005-01-18  Maurizio Paolini <paolini@dmf.unicatt.it>

	* now the construction of a generic affinity and a generic
	projectivity (defined by the image of 3 or 4 points) takes
	advantage of the existence of polygon.

2005-01-15  Maurizio Paolini <paolini@dmf.unicatt.it>

	* new PolygonBNPType corresponding to a polygon with a
	generic number of vertices.  It is constructed by selecting
	the vertices and ending up selecting the first vertex again.

	* the new ObjectConstructor::isAlreadySelectedOK method is a
	technical addition, it returns false for all normal objects
	(meaning that duplicated arguments are not acceptable). This
	is introduced in order to implement the construction of
	polygons "a la Drgeo".

2005-01-12  Pino Toscano <toscano.pino@tiscali.it>
